--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         margin: 0;
       }
     </style>
-    <title>46timer - 4:6 Method Coffee Timer</title>
+    <title>Drip Recipes: Your Guide to Perfect Pour-Over Coffee</title>
   </head>
   <body>
     <div id="root"></div>
