Add Raleway font and enhance Header component with logo and layout adjustments

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       }
     </style>
     <title>Drip Recipes: Your Guide to Perfect Pour-Over Coffee</title>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" rel="stylesheet">
   </head>
   <body>
     <div id="root"></div>
